--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,7 @@ override.tf.json
 # Ignore CLI configuration files
 .terraformrc
 terraform.rc
+
+/app/layers/nodejs/node_modules
+/app/layers/nodejs/*.zip
+/terraform/files/*.zip
